--- a/dynamic.j2
+++ b/dynamic.j2
@@ -3,6 +3,10 @@
 		<center><h1>The Server Operating System : {{ ansible_distribution }} </h1>
 		<br>
 		<h1>The Server Hostname : {{ ansible_distribution }} </h1>
+		<br>
+		<h1>The Admin User : {{ myusername }} </h1>
+		<br>
+		<h1> {{ mywelcomemessage }} </h1>
 		</center>
 	</body>
 </html>
